# uart_rx_sync

./: .gitignore  CMakeLists.txt  uart_rx_sync.ioc
UserCode/: CMakeLists.txt
UserCode/app/: app.c  app.h
UserCode/drivers/: uart_rx_sync.c  uart_rx_sync.h
